projects/vb6parse/snapshots/tests/invalid_syntax/missing_end/missing_end_property_before_next_property_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/missing_end.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nProperty Get Name() As String\\n    Name = m_name\\nProperty Let Name(ByVal value As String)\\n    m_name = value\\nEnd Property\\n\", error_offset: 49, line_start: 4, line_end: 4, kind: Parser(UnexpectedTokens { expected: [\"End Property\"], found: [PropertyKeyword] }), severity: Error, labels: [], notes: [] }"
