projects/vb6parse/snapshots/tests/invalid_syntax/missing_end/missing_end_sub_before_next_sub_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/missing_end.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub FirstSub()\\n    Dim x As Integer\\n    x = 10\\nPublic Sub SecondSub()\\n    MsgBox \\\"ok\\\"\\nEnd Sub\\n\", error_offset: 48, line_start: 5, line_end: 5, kind: Parser(UnexpectedTokens { expected: [\"End Sub\"], found: [PublicKeyword] }), severity: Error, labels: [], notes: [] }"
